[project]
name = "mcp-server-grants-gov"
version = "0.1.0"
description = "MCP server for the Grants.gov API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.1.0",
    "httpx>=0.27.0",
]

[project.scripts]
grants-gov-mcp = "grants_gov_mcp.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grants_gov_mcp"]
